check eligibility for loan and applied for loan module (#87)
